<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="memberDetailViewModel"
            type="com.example.parliamentmembers.viewmodels.MemberDetailViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.MembersInfoFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/minister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/member"
                android:theme="@style/TextStyle" />

            <ImageView
                android:id="@+id/memberImage"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cinzel_decorative_bold"
                android:text="@string/name"
                android:textSize="22sp"
                android:textColor="#001531"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/constituency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/constituency"
                android:theme="@style/TextStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/age"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:theme="@style/TextStyle" />

                <TextView
                    android:id="@+id/party"
                    android:layout_width="205dp"
                    android:layout_height="wrap_content"
                    android:text="@string/party"
                    android:paddingRight="40dp"
                    android:theme="@style/TextStyle"
                    android:paddingEnd="40dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/ratingBar1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:progressBackgroundTint="#cee3ff"
                    android:progressTint="#002f6c"
                    android:rating="0"
                    android:stepSize="0.5"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/ratingText"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:theme="@style/TextStyle"
                    android:layout_marginStart="30dp" />

            </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/commentEditText"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/editText"
                android:minHeight="48dp" />

            <Button
                android:layout_marginLeft="20dp"
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button1"
                android:layout_marginStart="20dp" />
        </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>
    </FrameLayout>
</layout>